--- a/src/component/login/student/student.module.scss
+++ b/src/component/login/student/student.module.scss
@@ -123,6 +123,13 @@
   margin: 0;
 }
 
+.passwordContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+
 // .calculatorinputgroup:focus {
 //   outline: none;
 // }
